--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta type="description" content="Really cool website about graphic design you really need to check out">
     <title>Magazine Magazine Magazine</title>
-    <script src="./ShaderProgram.js"></script>
 </head>
 
 <body>
     <div id="container">
-        <img src="/no2.jpg" alt="">
+        <img src="no2.jpg" alt="">
         <canvas id="draw"></canvas>
     </div>
 
