added loading check

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
     <div id="message">
-        Click anywhere to start
+        Loading...
     </div>
     <audio src="flute.wav">
     </audio>
@@ -36,7 +36,7 @@
     }
 
     html {
-        background-image: url("/snowflake.jpg");
+        background-image: url("snowflake.jpg");
         background-repeat: repeat;
     }
 
