fixed mac os issue and added description

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta type="description" content="Really cool website about graphic design you really need to check out">
+    <meta name="description" content="Really cool website about graphic design you really need to check out">
     <title>Magazine Magazine Magazine</title>
 </head>
 
